Enable GA4 tracking on the phase banner

--- a/app/views/layouts/design_system.html.erb
+++ b/app/views/layouts/design_system.html.erb
@@ -35,6 +35,7 @@
   <div class="govuk-width-container">
     <%= render "shared/phase_banner", {
         show_feedback_banner: t('admin.feedback.show_banner'),
+        ga4_tracking: true
       } %>
 
     <%= yield(:back_link) %>
