--- a/app/views/admin/contact_translations/edit.html.erb
+++ b/app/views/admin/contact_translations/edit.html.erb
@@ -5,139 +5,149 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= form_with model: @translated_contact, url: admin_organisation_contact_translation_path(@contactable, @translated_contact, translation_locale), method: :put do |form| %>
-      <%= render "govuk_publishing_components/components/input", {
-        label: {
-          text: "Title (required)",
+      <%= render "components/translated_input", {
+        input: {
+          label: {
+            text: "Title (required)",
+          },
+          heading_size: "l",
+          name: "contact[title]",
+          id: "contact_title",
+          value: @translated_contact.title,
+          error_items: errors_for(form.object.errors, :title),
+          right_to_left: @translated_contact.translation_locale.rtl?,
+          right_to_left_help: false
         },
-        heading_size: "l",
-        name: "contact[title]",
-        id: "contact_title",
-        value: @translated_contact.title,
-        error_items: errors_for(form.object.errors, :title),
-        right_to_left: @translated_contact.translation_locale.rtl?,
-        right_to_left_help: false
+        details: {
+          text: @english_contact.title
+        }
       } %>
 
-      <h2 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English
-        translation:</h2>
-      <p class="app-view-translation__english-content govuk-body"><%= @translated_contact.title %></p>
-
-      <%= render "govuk_publishing_components/components/textarea", {
-        label: {
+      <%= render "components/translated_textarea", {
+        textarea: {
+           label: {
           heading_size: "l",
           text: "Comments",
+          },
+          name: "contact[comments]",
+          id: "contact_comments",
+          value: @translated_contact.comments,
+          error_items: errors_for(form.object.errors, :comments),
+          right_to_left: @translated_contact.translation_locale.rtl?,
+          right_to_left_help: false
         },
-        name: "contact[comments]",
-        id: "contact_comments",
-        value: @translated_contact.comments,
-        error_items: errors_for(form.object.errors, :comments),
-        right_to_left: @translated_contact.translation_locale.rtl?,
-        right_to_left_help: false
+        details: {
+          text: @english_contact.comments
+        }
       } %>
 
-      <h2 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English
-        translation:</h2>
-      <p class="app-view-translation__english-content govuk-body"><%= @translated_contact.comments %></p>
-      <%= render "govuk_publishing_components/components/input", {
-        label: {
-          text: "Recipient",
-        },
-        heading_size: "l",
-        name: "contact[recipient]",
-        id: "contact_recipient",
-        value: @translated_contact.recipient,
-        error_items: errors_for(form.object.errors, :recipient),
-        right_to_left: @translated_contact.translation_locale.rtl?,
-        right_to_left_help: false
-      } %>
-
-      <h2 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English
-        translation:</h2>
-      <p class="app-view-translation__english-content govuk-body"><%= @translated_contact.recipient %></p>
-
-      <%= render "govuk_publishing_components/components/textarea", {
-        label: {
+      <%= render "components/translated_input", {
+        input: {
+          label: {
+            text: "Recipient",
+          },
           heading_size: "l",
-          text: "Street address (required)",
+          name: "contact[recipient]",
+          id: "contact_recipient",
+          value: @translated_contact.recipient,
+          error_items: errors_for(form.object.errors, :recipient),
+          right_to_left: @translated_contact.translation_locale.rtl?,
+          right_to_left_help: false
         },
-        name: "contact[street_address]",
-        id: "contact_street_address",
-        value: @translated_contact.street_address,
-        error_items: errors_for(form.object.errors, :street_address),
-        right_to_left: @translated_contact.translation_locale.rtl?,
-        right_to_left_help: false
-      } %>
-      <h2 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English
-        translation:</h2>
-      <p class="app-view-translation__english-content govuk-body"><%= @translated_contact.street_address %></p>
-
-      <%= render "govuk_publishing_components/components/input", {
-        label: {
-          text: "Locality",
-        },
-        heading_size: "l",
-        name: "contact[locality]",
-        id: "contact_locality",
-        value: @translated_contact.locality,
-        error_items: errors_for(form.object.errors, :locality),
-        right_to_left: @translated_contact.translation_locale.rtl?,
-        right_to_left_help: false
+        details: {
+          text: @english_contact.recipient
+        }
       } %>
 
-      <h2 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English
-        translation:</h2>
-      <p class="app-view-translation__english-content govuk-body"><%= @translated_contact.locality %></p>
-
-      <%= render "govuk_publishing_components/components/input", {
-        label: {
-          text: "Region",
+      <%= render "components/translated_textarea", {
+        textarea: {
+          label: {
+            heading_size: "l",
+            text: "Street address (required)",
+          },
+          name: "contact[street_address]",
+          id: "contact_street_address",
+          value: @translated_contact.street_address,
+          error_items: errors_for(form.object.errors, :street_address),
+          right_to_left: @translated_contact.translation_locale.rtl?,
+          right_to_left_help: false
         },
-        heading_size: "l",
-        name: "contact[region]",
-        id: "contact_region",
-        value: @translated_contact.region,
-        error_items: errors_for(form.object.errors, :region),
-        right_to_left: @translated_contact.translation_locale.rtl?,
-        right_to_left_help: false
+         details: {
+          text: @english_contact.street_address
+        }
       } %>
 
-      <h2 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English
-        translation:</h2>
-      <p class="app-view-translation__english-content govuk-body"><%= @translated_contact.region %></p>
-
-      <%= render "govuk_publishing_components/components/input", {
-        label: {
-          text: "Email",
+      <%= render "components/translated_input", {
+        input: {
+          label: {
+            text: "Locality",
+          },
+          heading_size: "l",
+          name: "contact[locality]",
+          id: "contact_locality",
+          value: @translated_contact.locality,
+          error_items: errors_for(form.object.errors, :locality),
+          right_to_left: @translated_contact.translation_locale.rtl?,
+          right_to_left_help: false
         },
-        heading_size: "l",
-        name: "contact[email]",
-        id: "contact_email",
-        value: @translated_contact.email,
-        error_items: errors_for(form.object.errors, :email),
-        right_to_left: @translated_contact.translation_locale.rtl?,
-        right_to_left_help: false
+        details: {
+          text: @english_contact.locality
+        }
       } %>
 
-      <h2 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English
-        translation:</h2>
-      <p class="app-view-translation__english-content govuk-body"><%= @translated_contact.email %></p>
-
-      <%= render "govuk_publishing_components/components/input", {
-        label: {
-          text: "Contact form URL",
+      <%= render "components/translated_input", {
+        input: {
+          label: {
+            text: "Region",
+          },
+          heading_size: "l",
+          name: "contact[region]",
+          id: "contact_region",
+          value: @translated_contact.region,
+          error_items: errors_for(form.object.errors, :region),
+          right_to_left: @translated_contact.translation_locale.rtl?,
+          right_to_left_help: false
         },
-        heading_size: "l",
-        name: "contact[contact_form_url]",
-        id: "contact_contact_form_url",
-        value: @translated_contact.contact_form_url,
-        error_items: errors_for(form.object.errors, :contact_form_url),
-        right_to_left: @translated_contact.translation_locale.rtl?,
-        right_to_left_help: false
+        details: {
+          text: @english_contact.region
+        }
       } %>
 
-      <h2 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English
-        translation:</h2>
-      <p class="app-view-translation__english-content govuk-body"><%= @translated_contact.contact_form_url %></p>
+      <%= render "components/translated_input", {
+        input: {
+          label: {
+            text: "Email",
+          },
+          heading_size: "l",
+          name: "contact[email]",
+          id: "contact_email",
+          value: @translated_contact.email,
+          error_items: errors_for(form.object.errors, :email),
+          right_to_left: @translated_contact.translation_locale.rtl?,
+          right_to_left_help: false
+        },
+        details: {
+          text: @english_contact.email
+        }
+      } %>
+
+      <%= render "components/translated_input", {
+        input: {
+          label: {
+            text: "Contact form URL",
+          },
+          heading_size: "l",
+          name: "contact[contact_form_url]",
+          id: "contact_contact_form_url",
+          value: @translated_contact.contact_form_url,
+          error_items: errors_for(form.object.errors, :contact_form_url),
+          right_to_left: @translated_contact.translation_locale.rtl?,
+          right_to_left_help: false
+        },
+        details: {
+          text: @english_contact.contact_form_url
+        }
+      } %>
 
       <div class="govuk-!-margin-bottom-8 app-view-contacts__phone">
         <% if @translated_contact.contact_numbers.present? %>
@@ -146,46 +156,47 @@
             margin_bottom: 6,
             font_size: "l",
           } %>
+
           <%= form.fields_for :contact_numbers, @translated_contact.contact_numbers do |number_form| %>
-            <%= render "govuk_publishing_components/components/input", {
-              label: {
-                text: "Label"
+            <%= render "components/translated_input", {
+              input: {
+                label: {
+                  text: "Label"
+                },
+                name: "contact[contact_numbers_attributes][#{number_form.index}][label]",
+                id: "contact_contact_number_#{number_form.index}_label",
+                value: number_form.object.label,
+                heading_size: "m",
+                error_items: errors_for(number_form.object.errors, :label),
+                right_to_left: number_form.object.translation_locale.rtl?,
+                right_to_left_help: false
               },
-              name: "contact[contact_numbers_attributes][#{number_form.index}][label]",
-              id: "contact_contact_number_#{number_form.index}_label",
-              value: number_form.object.label,
-              heading_size: "m",
-              error_items: errors_for(number_form.object.errors, :label),
-              right_to_left: number_form.object.translation_locale.rtl?,
-              right_to_left_help: false
+              details: {
+                text: number_form.object.label
+              }
             } %>
-            <% if number_form.object.label.present? %>
-              <div class="govuk-!-margin-bottom-8">
-                <h2 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English translation:</h2>
-                <p class="app-view-translation__english-content govuk-body"><%= number_form.object.label %></p>
-              </div>
-            <% end %>
-            <%= render "govuk_publishing_components/components/input", {
-              label: {
-                text: "Number"
+
+            <%= render "components/translated_input", {
+              input: {
+                label: {
+                  text: "Number"
+                },
+                name: "contact[contact_numbers_attributes][#{number_form.index}][number]",
+                id: "contact_contact_number_#{number_form.index}_number",
+                value: number_form.object.number,
+                heading_size: "m",
+                error_items: errors_for(number_form.object.errors, :number),
+                right_to_left: number_form.object.translation_locale.rtl?,
+                right_to_left_help: false
               },
-              name: "contact[contact_numbers_attributes][#{number_form.index}][number]",
-              id: "contact_contact_number_#{number_form.index}_number",
-              value: number_form.object.number,
-              heading_size: "m",
-              error_items: errors_for(number_form.object.errors, :number),
-              right_to_left: number_form.object.translation_locale.rtl?,
-              right_to_left_help: false
+               details: {
+                text: number_form.object.number
+              }
             } %>
-            <% if number_form.object.number.present? %>
-              <div class="govuk-!-margin-bottom-8">
-                <h2 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English translation:</h2>
-                <p class="app-view-translation__english-content govuk-body"><%= number_form.object.number %></p>
-              </div>
-            <% end %>
           <% end %>
         <% end %>
       </div>
+
       <div class="govuk-button-group">
         <%= render "govuk_publishing_components/components/button", {
           text: "Save",
