--- a/app/views/admin/organisation_translations/edit.html.erb
+++ b/app/views/admin/organisation_translations/edit.html.erb
@@ -5,59 +5,70 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= form_with model: @translated_organisation, url: admin_organisation_translation_path(@translated_organisation, translation_locale) do |form| %>
-      <%= render "govuk_publishing_components/components/input", {
-        label: {
-          text: "Name (required)",
-        },
-        heading_size: "l",
-        name: "organisation[name]",
-        id: "organisation_name",
-        value: @translated_organisation.name,
-        error_items: errors_for(form.object.errors, :name),
-        right_to_left: @translated_organisation.translation_locale.rtl?,
-        right_to_left_help: false
-      } %>
-
-      <h2 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English name
-        content:</h2>
-      <p class="app-view-translation__english-content govuk-body"><%= @organisation.name %></p>
-      <%= render "govuk_publishing_components/components/input", {
-        label: {
-          text: "Acronym",
-        },
-        heading_size: "l",
-        name: "organisation[acronym]",
-        id: "organisation_acronym",
-        value: @translated_organisation.acronym,
-        error_items: errors_for(form.object.errors, :acronym),
-        right_to_left: @translated_organisation.translation_locale.rtl?,
-        right_to_left_help: false
-      } %>
-      <%= render "govuk_publishing_components/components/textarea", {
-        label: {
+      <%= render "components/translated_input", {
+        input: {
+          label: {
+            text: "Name (required)",
+          },
           heading_size: "l",
-          text: "Logo formatted name (required)",
+          name: "organisation[name]",
+          id: "organisation_name",
+          value: @translated_organisation.name,
+          error_items: errors_for(@translated_organisation.errors, :name),
+          right_to_left: @translated_organisation.translation_locale.rtl?,
+          right_to_left_help: false
         },
-        name: "organisation[logo_formatted_name]",
-        id: "organisation_logo_formatted_name",
-        value: @translated_organisation.logo_formatted_name,
-        rows: 4,
-        error_items: errors_for(form.object.errors, :logo_formatted_name),
-        right_to_left: @translated_organisation.translation_locale.rtl?,
-        right_to_left_help: false
+        details: {
+          text: @organisation.name
+        }
       } %>
 
-      <h2 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English:</h2>
-      <p class="app-view-translation__english-content govuk-body"><%= @organisation.logo_formatted_name %></p>
+      <%= render "components/translated_input", {
+        input: {
+          label: {
+            text: "Acronym",
+          },
+          heading_size: "l",
+          name: "organisation[acronym]",
+          id: "organisation_acronym",
+          value: @translated_organisation.acronym,
+          error_items: errors_for(@translated_organisation.errors, :acronym),
+          right_to_left: @translated_organisation.translation_locale.rtl?,
+          right_to_left_help: false
+        },
+        details: {
+          text: @organisation.acronym
+        }
+      } %>
+
+      <%= render "components/translated_textarea", {
+        textarea: {
+          label: {
+            heading_size: "l",
+            text: "Logo formatted name (required)",
+          },
+          name: "organisation[logo_formatted_name]",
+          id: "organisation_logo_formatted_name",
+          value: @translated_organisation.logo_formatted_name,
+          rows: 4,
+          error_items: errors_for(@translated_organisation.errors, :logo_formatted_name),
+          right_to_left: @translated_organisation.translation_locale.rtl?,
+          right_to_left_help: false
+        },
+        details: {
+          text: @organisation.logo_formatted_name
+        }
+      } %>
 
       <%= render 'admin/shared/featured_link_fields', form: form %>
+
       <div class="govuk-button-group govuk-!-margin-top-8">
         <%= render "govuk_publishing_components/components/button", {
           text: "Save",
           data_attributes: {
             module: "gem-track-click",
             "track-category": "form-button",
-            "track-action": "#{form.object.class.name.demodulize.underscore.dasherize}-button",
+            "track-action": "#{@translated_organisation.class.name.demodulize.underscore.dasherize}-button",
             "track-label": "Save"
           }
         } %>
