--- a/app/views/components/_translated_textarea.html.erb
+++ b/app/views/components/_translated_textarea.html.erb
@@ -5,12 +5,19 @@
   details ||= {}
   details_text = details[:text]
   details_title = details[:title] || sanitize("English translation #{tag.span("for #{textarea_label}", class: "govuk-visually-hidden")}")
+  govspeak_editor ||= false
 %>
 
 <%= content_tag :div, class: "app-c-translated-textarea", id: id do %>
-  <div class="app-c-translated-textarea__textarea">
-    <%= render "govuk_publishing_components/components/textarea", textarea.symbolize_keys %>
-  </div>
+  <% if govspeak_editor %>
+    <div class="app-c-translated-textarea__govspeak_editor">
+      <%= render "components/govspeak-editor", textarea.symbolize_keys %>
+    </div>
+  <% else %>
+    <div class="app-c-translated-textarea__textarea">
+      <%= render "govuk_publishing_components/components/textarea", textarea.symbolize_keys %>
+    </div>
+  <% end %>
 
   <% if details_text.present? %>
     <div class="app-c-translated-textarea__english-translation govuk-!-margin-bottom-6">
