Apply translated components to world news story translation page

--- a/app/views/admin/world_location_news_translations/edit.html.erb
+++ b/app/views/admin/world_location_news_translations/edit.html.erb
@@ -14,53 +14,60 @@
             text: "Changes to worldwide locations appear instantly on the live site.",
           } %>
 
-          <%= render "govuk_publishing_components/components/input", {
-            label: {
-              text: "Translation Name (required)",
-            },
-            heading_size: "l",
-            value: @translated_world_location_news.name,
-            name: "world_location_news[world_location_attributes][name]",
-            error_items: errors_for(@translated_world_location.errors, :name),
-            id: "world_location_news_world_location_name",
-            right_to_left: @translated_world_location_news.translation_locale.rtl?,
-            right_to_left_help: false
-          } %>
-
-          <h3 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English name content:</h3>
-          <p class="app-view-translation__english-content govuk-body govuk-!-margin-bottom-8"><%= @english_world_location_news.name %></p>
-
-          <%= render "govuk_publishing_components/components/input", {
-            label: {
-              text: "Title (required)"
-            },
-            heading_size: "l",
-            value: @translated_world_location_news.title,
-            name: "world_location_news[title]",
-            id: "world_location_news_title",
-            error_items: errors_for(@translated_world_location_news.errors, :title),
-            right_to_left: @translated_world_location_news.translation_locale.rtl?,
-            right_to_left_help: false
-          } %>
-
-          <h3 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English title content:</h3>
-          <p class="app-view-translation__english-content govuk-body govuk-!-margin-bottom-8"><%= @english_world_location_news.title %></p>
-
-          <%= render "components/govspeak-editor", {
-            label: {
-              text: "Mission statement",
+          <%= render "components/translated_input", {
+            input: {
+              label: {
+                text: "Translation Name (required)",
+              },
               heading_size: "l",
+              value: @translated_world_location_news.name,
+              name: "world_location_news[world_location_attributes][name]",
+              error_items: errors_for(@translated_world_location.errors, :name),
+              id: "world_location_news_world_location_name",
+              right_to_left: @translated_world_location_news.translation_locale.rtl?,
+              right_to_left_help: false,
             },
-            name: "world_location_news[mission_statement]",
-            id: "world_location_news_mission_statement",
-            value: @translated_world_location_news.mission_statement,
-            rows: 10,
-            right_to_left: @translated_world_location_news.translation_locale.rtl?,
-            right_to_left_help: false
+            details: {
+              text:  @english_world_location_news.name,
+            }
           } %>
 
-          <h3 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English mission statement content:</h3>
-          <p class="app-view-translation__english-content govuk-body govuk-!-margin-bottom-8"><%= @english_world_location_news.mission_statement %></p>
+          <%= render "components/translated_input", {
+            input: {
+              label: {
+                text: "Title (required)",
+              },
+              heading_size: "l",
+              value: @translated_world_location_news.title,
+              name: "world_location_news[title]",
+              id: "world_location_news_title",
+              error_items: errors_for(@translated_world_location_news.errors, :title),
+              right_to_left: @translated_world_location_news.translation_locale.rtl?,
+              right_to_left_help: false,
+            },
+            details: {
+              text:  @english_world_location_news.title,
+            }
+          } %>
+
+          <%= render "components/translated_textarea", {
+            textarea: {
+              label: {
+                text: "Mission statement",
+                heading_size: "l",
+              },
+              name: "world_location_news[mission_statement]",
+              id: "world_location_news_mission_statement",
+              value: @translated_world_location_news.mission_statement,
+              rows: 10,
+              right_to_left: @translated_world_location_news.translation_locale.rtl?,
+              right_to_left_help: false,
+            },
+             details: {
+              text: @english_world_location_news.mission_statement,
+            },
+            govspeak_editor: true,
+          } %>
 
           <div class="govuk-button-group govuk-!-margin-bottom-8">
             <%= render "govuk_publishing_components/components/button", {
